Fixed bug with fio

--- a/app/views/templates/index.html
+++ b/app/views/templates/index.html
@@ -27,7 +27,7 @@
                     <div class="modal-body">
 
                         <div class="form-group">
-                            <label for="fio" class="col-form-label">ФИО:</label>
+                            <label for="fio" class="col-form-label">ФИО (Введите фамилию,имя и отчество через пробел):</label>
                             <input type="text" class="form-control" id="fio" name="fio">
                         </div>
                         <div class="form-group">
